--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -1,37 +1,35 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
+  max-width: 80%;
+  width: 800px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.data-table {
+  margin: 2em 0;
+}
+
+thead {
+  background-color: orangered;
+}
+
+tbody th {
+  background-color: #394458;
+}
+
+h1 {
+  text-decoration: underline;
+  text-decoration-color: orangered;
+  text-decoration-thickness: 10px;
+}
+
+th, td {
+  padding: 20px;
+}
+
+td {
+  background-color: #323947;
 }
